# ishap

./: CMakeLists.txt  LICENSE  README.md
include/ishap/: ishap.hpp
